// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

// generates a dbml file that can visualise the ERD
generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Person {
  id             Int      @id @default(autoincrement())
  email          String   @unique
  name           String
  hashedPassword String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  user           User?
  donator        Donator?
  admin          Admin?
}

model User {
  id            Int            @unique
  person        Person         @relation(fields: [id], references: [id], onDelete: Cascade, onUpdate: Cascade)
  reservations  Reservation[]
  reviews       Review[]       @relation("UserReviews")
  likes         Like[]
  reviewedItems ReviewedItem[]

  @@id([id])
}

model Review {
  id           Int           @id @default(autoincrement())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  rating       Int
  comment      String
  isAnonymous  Boolean       @default(false)
  userId       Int
  user         User          @relation("UserReviews", fields: [userId], references: [id])
  donatorId    Int
  donator      Donator       @relation("DonatorReviews", fields: [donatorId], references: [id])
  reply        Reply?
  images       Image[]
  likes        Like[]
  likeCount    Int           @default(0)
  reviewedItem ReviewedItem?
}

model ReviewedItem {
  id       Int    @id @default(autoincrement())
  userId   Int
  foodId   Int
  reviewId Int    @unique
  user     User   @relation(fields: [userId], references: [id])
  food     Food   @relation(fields: [foodId], references: [id])
  review   Review @relation(fields: [reviewId], references: [id])

  @@unique([userId, foodId])
}

model Like {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  userId    Int?
  donatorId Int?
  reviewId  Int
  user      User?    @relation(fields: [userId], references: [id])
  donator   Donator? @relation(fields: [donatorId], references: [id])
  review    Review   @relation(fields: [reviewId], references: [id])

  @@unique([userId, reviewId])
  @@unique([donatorId, reviewId])
}

model Reply {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  content   String
  reviewId  Int      @unique
  review    Review   @relation(fields: [reviewId], references: [id], onDelete: Cascade)
  donatorId Int
  donator   Donator  @relation(fields: [donatorId], references: [id])
}

model Image {
  id       Int    @id @default(autoincrement())
  url      String
  reviewId Int
  review   Review @relation(fields: [reviewId], references: [id], onDelete: Cascade)
}

model Donator {
  id            Int        @unique
  person        Person     @relation(fields: [id], references: [id], onDelete: Cascade, onUpdate: Cascade)
  donations     Donation[]
  reviews       Review[]   @relation("DonatorReviews")
  events        Event[]    @relation("Events")
  averageRating Float      @default(0)
  reviewCount   Int        @default(0)
  replies       Reply[]
  donationGoal  Int?
  achievement   String?    @default("Silver")
  posts         Post[]
  likes         Like[]

  @@id([id])
}

model Post {
  id        Int      @id @default(autoincrement())
  content   String
  imageUrl  String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  donatorId Int
  donator   Donator  @relation(fields: [donatorId], references: [id])
}

model Admin {
  id     Int    @unique
  person Person @relation(fields: [id], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@id([id])
}

model Donation {
  id           Int           @id @default(autoincrement())
  category     String
  deliveryDate DateTime
  location     String
  remarks      String?
  image        String?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  donatorId    Int
  donator      Donator       @relation(fields: [donatorId], references: [id], onDelete: Cascade)
  availability String        @default("Available") // Iruss made this to label availability of donations
  foods        Food[]
  reservations Reservation[]
}

model Food {
  id               Int               @id @default(autoincrement())
  name             String
  quantity         Int
  type             String
  expiryDate       DateTime
  createdAt        DateTime          @default(now())
  donationId       Int
  donation         Donation          @relation(fields: [donationId], references: [id], onDelete: Cascade)
  reservationItems ReservationItem[]
  reviewedItems    ReviewedItem[]
}

model Reservation {
  id                  Int               @id @default(autoincrement())
  userId              Int
  user                User              @relation(fields: [userId], references: [id])
  collectionDate      DateTime
  collectionTimeStart String
  collectionTimeEnd   String
  collectionStatus    String            @default("Uncollected")
  remarks             String?
  createdAt           DateTime          @default(now())
  updatedAt           DateTime          @updatedAt
  reservationItems    ReservationItem[]
  donationId          Int // make it optional to test prisma studio
  donation            Donation?         @relation(fields: [donationId], references: [id]) // make it optional to test prisma studio

  @@index([userId])
  @@index([donationId])
}

model ReservationItem {
  id            Int         @id @default(autoincrement())
  reservationId Int
  reservation   Reservation @relation(fields: [reservationId], references: [id])
  foodId        Int
  food          Food        @relation(fields: [foodId], references: [id])
  quantity      Int

  @@index([reservationId])
  @@index([foodId])
}

model Event {
  id             Int           @id @default(autoincrement())
  title          String
  briefSummary   String
  fullSummary    String
  phoneNumber    String
  emailAddress   String
  startDate      DateTime
  endDate        DateTime
  maxSlots       Int
  takenSlots     Int
  attire         String
  donatorId      Int
  eventOrganiser Donator       @relation("Events", fields: [donatorId], references: [id])
  images         EventImage[]
  participants   Participant[]
}

model EventImage {
  id      Int    @id @default(autoincrement())
  url     String
  eventId Int
  event   Event  @relation(fields: [eventId], references: [id], onDelete: Cascade)
}

model Participant {
  id      Int   @id @default(autoincrement())
  userId  Int
  event   Event @relation(fields: [eventId], references: [id], onDelete: Cascade)
  eventId Int
}
