//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Person {
  id Int [pk, increment]
  email String [unique, not null]
  name String [not null]
  hashedPassword String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  donator Donator
  admin Admin
}

Table User {
  id Int [pk]
  person Person [not null]
  reservations Reservation [not null]
  reviews Review [not null]
  likes Like [not null]
  reviewedItems ReviewedItem [not null]
  cartItems CartItem [not null]

  indexes {
    (id) [pk]
  }
}

Table Review {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rating Int [not null]
  comment String [not null]
  isAnonymous Boolean [not null, default: false]
  userId Int [not null]
  user User [not null]
  donatorId Int [not null]
  donator Donator [not null]
  reply Reply
  images Image [not null]
  likes Like [not null]
  likeCount Int [not null, default: 0]
  reviewedItem ReviewedItem
}

Table ReviewedItem {
  id Int [pk, increment]
  userId Int [not null]
  foodId Int [not null]
  reviewId Int [unique, not null]
  user User [not null]
  food Food [not null]
  review Review [not null]

  indexes {
    (userId, foodId) [unique]
  }
}

Table Like {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  userId Int
  donatorId Int
  reviewId Int [not null]
  user User
  donator Donator
  review Review [not null]

  indexes {
    (userId, reviewId) [unique]
    (donatorId, reviewId) [unique]
  }
}

Table Reply {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  reviewId Int [unique, not null]
  review Review [not null]
  donatorId Int [not null]
  donator Donator [not null]
}

Table Image {
  id Int [pk, increment]
  url String [not null]
  reviewId Int [not null]
  review Review [not null]
}

Table Donator {
  id Int [pk]
  person Person [not null]
  donations Donation [not null]
  reviews Review [not null]
  events Event [not null]
  averageRating Float [not null, default: 0]
  reviewCount Int [not null, default: 0]
  replies Reply [not null]
  donationGoal Int
  achievement String [default: 'Silver']
  posts Post [not null]
  likes Like [not null]

  indexes {
    (id) [pk]
  }
}

Table Post {
  id Int [pk, increment]
  content String [not null]
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  donatorId Int [not null]
  donator Donator [not null]
}

Table Admin {
  id Int [pk]
  person Person [not null]

  indexes {
    (id) [pk]
  }
}

Table Donation {
  id Int [pk, increment]
  category String [not null]
  deliveryDate DateTime [not null]
  location String [not null]
  remarks String
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  donatorId Int [not null]
  donator Donator [not null]
  availability String [not null, default: 'Available']
  foods Food [not null]
  reservations Reservation [not null]
  cartItems CartItem [not null]
}

Table Food {
  id Int [pk, increment]
  name String [not null]
  quantity Int [not null]
  type String [not null]
  expiryDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  donationId Int [not null]
  donation Donation [not null]
  reservationItems ReservationItem [not null]
  reviewedItems ReviewedItem [not null]
}

Table Reservation {
  id Int [pk, increment]
  userId Int [not null]
  user User [not null]
  collectionDate DateTime [not null]
  collectionTimeStart String [not null]
  collectionTimeEnd String [not null]
  collectionStatus String [not null, default: 'Uncollected']
  remarks String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  reservationItems ReservationItem [not null]
  donationId Int [not null]
  donation Donation
}

Table ReservationItem {
  id Int [pk, increment]
  reservationId Int [not null]
  reservation Reservation [not null]
  foodId Int [not null]
  food Food [not null]
  quantity Int [not null]
}

Table CartItem {
  id Int [pk, increment]
  userId Int [not null]
  user User [not null]
  donationId Int [not null]
  donation Donation [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, donationId) [unique]
  }
}

Table Event {
  id Int [pk, increment]
  title String [not null]
  briefSummary String [not null]
  fullSummary String [not null]
  phoneNumber String [not null]
  emailAddress String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  maxSlots Int [not null]
  takenSlots Int [not null]
  attire String [not null]
  donatorId Int [not null]
  eventOrganiser Donator [not null]
  images EventImage [not null]
  participants Participant [not null]
}

Table EventImage {
  id Int [pk, increment]
  url String [not null]
  eventId Int [not null]
  event Event [not null]
}

Table Participant {
  id Int [pk, increment]
  userId Int [not null]
  event Event [not null]
  eventId Int [not null]
}

Ref: User.id - Person.id [delete: Cascade]

Ref: Review.userId > User.id

Ref: Review.donatorId > Donator.id

Ref: ReviewedItem.userId > User.id

Ref: ReviewedItem.foodId > Food.id

Ref: ReviewedItem.reviewId - Review.id

Ref: Like.userId > User.id

Ref: Like.donatorId > Donator.id

Ref: Like.reviewId > Review.id

Ref: Reply.reviewId - Review.id [delete: Cascade]

Ref: Reply.donatorId > Donator.id

Ref: Image.reviewId > Review.id [delete: Cascade]

Ref: Donator.id - Person.id [delete: Cascade]

Ref: Post.donatorId > Donator.id

Ref: Admin.id - Person.id [delete: Cascade]

Ref: Donation.donatorId > Donator.id [delete: Cascade]

Ref: Food.donationId > Donation.id [delete: Cascade]

Ref: Reservation.userId > User.id

Ref: Reservation.donationId > Donation.id

Ref: ReservationItem.reservationId > Reservation.id

Ref: ReservationItem.foodId > Food.id

Ref: CartItem.userId > User.id [delete: Cascade]

Ref: CartItem.donationId > Donation.id [delete: Cascade]

Ref: Event.donatorId > Donator.id

Ref: EventImage.eventId > Event.id [delete: Cascade]

Ref: Participant.eventId > Event.id [delete: Cascade]